added some code

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                     <path d="M7 10l5 5 5-5" />
                 </g>
             </svg>
-
         </div>
     </div>
+    <p id="current-date"></p>
 
 </main>
 
