added some code

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </svg>
     </div>
     <div class="divider"></div>
+    <!--Dropdown options for the date-->
     <div class="dropdown-container">
         <select name="date-options" id="date-options">
             <option value="dd-mm-yyyy">Day, Month, Year</option>
@@ -40,7 +41,6 @@
         <div class="slect-icon">
             <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="25" height="35" viewBox="0 0 24 24">
                 <rect x="0" fill="none" width="24" height="24" />
-
                 <g>
                     <path d="M7 10l5 5 5-5" />
                 </g>
@@ -48,11 +48,9 @@
         </div>
     </div>
     <p id="current-date"></p>
-
 </main>
 
 <body>
-
     <script src="app.js"></script>
 </body>
 
