added some code

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <option value="yyyy-mm-dd">Year, Month, Day</option>
             <option value="mm-dd-yyyy-h-mm">Month, Day, Year, Hours, Minutes</option>
         </select>
-        <div class="slect-icon">
+        <div class="select-icon">
             <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="25" height="35" viewBox="0 0 24 24">
                 <rect x="0" fill="none" width="24" height="24" />
                 <g>
